// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_channel/sidebar_base_channel should match snapshot 1`] = `
<Connect(SidebarChannelLink)
  ariaLabelPrefix="public channel"
  channel={
    Object {
      "create_at": 0,
      "creator_id": "",
      "delete_at": 0,
      "display_name": "channel_display_name",
      "extra_update_at": 0,
      "group_constrained": false,
      "header": "",
      "id": "channel_id",
      "last_post_at": 0,
      "name": "",
      "purpose": "",
      "scheme_id": "",
      "team_id": "",
      "total_msg_count": 0,
      "type": "O",
      "update_at": 0,
    }
  }
  closeHandler={[Function]}
  icon={
    <i
      className="icon icon-globe"
    />
  }
  isCollapsed={false}
  label="channel_display_name"
  link="/team_name/channels/"
/>
`;

exports[`components/sidebar/sidebar_channel/sidebar_base_channel should match snapshot when private channel 1`] = `
<Connect(SidebarChannelLink)
  ariaLabelPrefix="private channel"
  channel={
    Object {
      "create_at": 0,
      "creator_id": "",
      "delete_at": 0,
      "display_name": "channel_display_name",
      "extra_update_at": 0,
      "group_constrained": false,
      "header": "",
      "id": "channel_id",
      "last_post_at": 0,
      "name": "",
      "purpose": "",
      "scheme_id": "",
      "team_id": "",
      "total_msg_count": 0,
      "type": "P",
      "update_at": 0,
    }
  }
  closeHandler={[Function]}
  icon={
    <i
      className="icon icon-lock-outline"
    />
  }
  isCollapsed={false}
  label="channel_display_name"
  link="/team_name/channels/"
/>
`;
